<resources>
    <string name="app_name">harryP</string>
    <string name="logo_description">Logo da escola de harry potter</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="repetir_senha">Repita a sua senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login_error">Usuário ou senha inválidos</string>
    <string name="cadastro_error">Falha na criação do seu usuário! Tente novamente por favor!</string>
    <string name="email">Email</string>
    <string name="voltar">Voltar</string>
    <string name="hobby">Hobby</string>
    <string name="menu">Menu</string>
    <string name="ingredients">Ingredients</string>
    <string name="spells">Spells</string>
    <string name="houses">Houses</string>
    <string name="elixirs">Elixirs</string>
    <string name="sair">Sair</string>
    <string name="falhaInfoUser">Falha ao carregar as informações do usuário</string>
    <string name="error_get_houses">Erro ao carregar a lista de casas</string>
    <string name="error_get_ingredients">Erro ao carregar a lista de ingredientes</string>
    <string name="error_get_elixirs">Erro ao carregar a lista de porção</string>
    <string name="error_get_spells">Erro ao carregar a lista de feitiços</string>



</resources>